Online Vector Storage

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ faiss-cpu
 git+https://github.com/unifyai/langchain.git#egg=langchain&subdirectory=libs/langchain
 git+https://github.com/unifyai/langchain.git#egg=langchain-unify&subdirectory=libs/partners/unify
 langchain-community
+langchain-pinecone
